--- a/css/mice.css
+++ b/css/mice.css
@@ -22,7 +22,7 @@ Normal weight is 400
   font-family: "Muller";
   font-weight: normal;
   font-style: normal;
-  src: url("../fonts/MullerRegular.eot");
+  src: url("../fonts/MullerRegular.otf");
 }
 
 @font-face {
