--- a/css/mice.css
+++ b/css/mice.css
@@ -1200,6 +1200,7 @@ footer {
   background-color: #00CA9D;
   padding: 15px 30px;
   border-radius: 50px;
+  border: none;
   font-family: 'Muller', serif!important;
   font-weight: 400;
   font-size: 18px;
